<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/contentScrollView"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <!-- Name Label -->
        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/hintName"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="26sp" />

        <!-- Address Label -->
        <EditText
            android:id="@+id/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"

            android:hint="@string/hintAddress"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="26sp" />


        <!-- State Label -->
        <EditText
            android:id="@+id/input_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"

            android:hint="@string/hintState"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="26sp" />


        <!-- City Label -->
        <EditText
            android:id="@+id/input_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"

            android:hint="@string/hintCity"
            android:inputType="textPostalAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="26sp" />


        <!--  Email Label -->
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"

            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="26sp" />


        <!-- mobile number -->
        <EditText
            android:id="@+id/input_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"

            android:hint="@string/hintMobileNumber"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="26sp" />

        <!-- Password Label -->
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"

            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="26sp" />

        <!-- Password Re-enter Label -->
        <EditText
            android:id="@+id/input_reEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"

            android:hint="@string/hintRe_enterPassword"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="26sp" />

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/contentFieldSignUp"
            android:onClick="onSignupSuccess"
            android:padding="12dp"
            android:text="@string/txtSignUp" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/contentAlreadyMember"
            android:gravity="center"
            android:text="@string/txtAlreadyMember"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>